--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="page-header">
             <div class="page-header__container"> 
                 <a href="index.html" class="page-header__logo"> 
-                  <img src="logo.svg" class="page-header__logo-img"/>  
+                  <img src="assets/images/logo.svg" class="page-header__logo-img"/>  
                 </a>
 
                 <nav class="page-header__nav">
